--- a/detection_genetic_variations/documentation/latex/dir_f6fdf939602d75289726b5c899574043.tex
+++ b/detection_genetic_variations/documentation/latex/dir_f6fdf939602d75289726b5c899574043.tex
@@ -2,4 +2,8 @@
 \label{dir_f6fdf939602d75289726b5c899574043}\index{C\+:/\+Users/\+Marcos/\+Documents/\+Mestrado/\+Projeto/\+Codigo/detection\+\_\+genetic\+\_\+variations/src Directory Reference@{C\+:/\+Users/\+Marcos/\+Documents/\+Mestrado/\+Projeto/\+Codigo/detection\+\_\+genetic\+\_\+variations/src Directory Reference}}
 \subsection*{Files}
 \begin{DoxyCompactItemize}
+\item 
+file \hyperlink{fastq__reader_8h}{fastq\+\_\+reader.\+h}
+\item 
+file \hyperlink{main_8cpp}{main.\+cpp}
 \end{DoxyCompactItemize}
