--- a/detection_genetic_variations/documentation/latex/refman.tex
+++ b/detection_genetic_variations/documentation/latex/refman.tex
@@ -137,6 +137,15 @@
 \hypersetup{pageanchor=true}
 
 %--- Begin generated contents ---
+\chapter{Class Index}
+\input{annotated}
+\chapter{File Index}
+\input{files}
+\chapter{Class Documentation}
+\input{class_f_a_s_t_q_reader}
+\chapter{File Documentation}
+\input{fastq__reader_8h}
+\input{main_8cpp}
 %--- End generated contents ---
 
 % Index
